# swc

./: .gitignore  AnimatedContainer.cpp  AnimatedContainer.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  README.md  Settings.cpp  Settings.h  cloptions.h  main.cpp  swc.pro
man/: genman.sh  moduleSettingsFile.h2m  settingsFile.h2m
modules/: CMakeLists.txt  CPUGraph.cpp  CPUGraph.h  Graph.cpp  Graph.h  LineGraph.cpp  LineGraph.h  ModuleBase.cpp  ModuleBase.h  ModuleGrid.cpp  ModuleGrid.h  ModuleInfos.cpp  ModuleInfos.h  ModuleInfosDeserialize.cpp  ModuleInfosDeserialize.h  ModuleSize.cpp  ModuleSize.h  ModuleUtils.cpp  ModuleUtils.h
swc/: AnimatedContainer.cpp  AnimatedContainer.h  AnimatedModuleContainer.cpp  AnimatedModuleContainer.h  AnimatedWindowContainer.cpp  AnimatedWindowContainer.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Settings.cpp  Settings.h  cloptions.h  exceptions.h  helptexts.h  main.cpp  swc.pro
utils/: CMakeLists.txt  CPUStatsReader.cpp  CPUStatsReader.h  DataFetchError.h  DataReaderBase.h  DataUsage.cpp  DataUsage.h  DiskStatsReader.cpp  DiskStatsReader.h  MemStatsReader.cpp  MemStatsReader.h  NetworkStatsReader.cpp  NetworkStatsReader.h
